#
# Really nothing goes here, as everything
# is set up in the parent package top-framework
#
[tool.poetry]
name = "web-top"
version = "0.1.0"
description = "web-top is a UNIX top-like tool to live HTTP requests and responses of any web server."
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
eywords = ["cli", "UNIX", "TUI", "Gunicorn", "WSGI"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
